--- a/css/MazeClient.css
+++ b/css/MazeClient.css
@@ -17,10 +17,15 @@ root {
 
 html {
     background-image: url("../images/background.jpg");
+    height: 980px;
 }
 
-body * { 
-    font-family: Ubuntu, sans-serif; 
+* { 
+    font-family: Ubuntu, sans-serif;
+}
+
+body {
+    height: 100%;
 }
 
 .glow {
@@ -35,11 +40,27 @@ body * {
 
 #wrapper {
     background-color: black;
-    max-width: 1000px;
-    margin-top: 30px;
+    max-width: 1200px;
+    height: 100%;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    padding: 20px;
+    padding: 0 20px;
+}
+
+#controlswrapper {
+    display: inline-block;
+    float: right;
+    height: 700px;
+    background-color: black;
+}
+
+#canvaswrapper {
+    display: inline-block;
+    float: left;
+    height: 700px;    
+    width: 700px;
+    background-color: black;
 }
 
 #pageheader {
@@ -47,74 +68,15 @@ body * {
     text-align: center;
 }
 
-/**
- * Shadow
- */
-.button::before {
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -webkit-box-shadow: #959595 0 2px 5px;
-    -moz-box-shadow: #959595 0 2px 5px;
-    border-radius: 3px;
-    box-shadow: #959595 0 2px 5px;
-    content: "";
-    display: block;
-    height: 100%;
-    left: 0;
-    padding: 2px 0 0;
-    position: absolute;
-    top: 0;
-    width: 100%; }
-
-.button:active::before { padding: 1px 0 0; }
-
-/**
- * Grey
- */
-.button {
-    -moz-box-shadow: inset 0 0 0 1px #63ad0d;
-    -webkit-box-shadow: inset 0 0 0 1px #63ad0d;
-    -moz-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    background: #eee;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#eee), to(#e2e2e2));
-    background: -moz-linear-gradient(#eee, #e2e2e2);
-    background: linear-gradient(#eee, #e2e2e2);
-    border: solid 1px #d0d0d0;
-    border-bottom: solid 3px #b2b1b1;
-    border-radius: 3px;
-    box-shadow: inset 0 0 0 1px #f5f5f5;
-    color: #555;
-    display: inline-block;
-    font: bold 12px;
-    margin: 0 25px 25px 0;
-    padding: 10px 20px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    text-shadow: 0 1px 0 #fafafa; }
-
-.button:hover {
-    background: #e4e4e4;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e4e4e4), to(#ededed));
-    background: -moz-linear-gradient(#e4e4e4, #ededed);
-    background: linear-gradient(#e4e4e4, #ededed);
-    border: solid 1px #c2c2c2;
-    border-bottom: solid 3px #b2b1b1;
-    box-shadow: inset 0 0 0 1px #efefef; }
-
-.button:active {
-    background: #dfdfdf;
-    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#dfdfdf), to(#e3e3e3));
-    background: -moz-linear-gradient(#dfdfdf, #e3e3e3);
-    background: linear-gradient(#dfdfdf, #e3e3e3);
-    border: solid 1px #959595;
-    box-shadow: inset 0 10px 15px 0 #c4c4c4;
-    top:2px;}
-
 fieldset {
+    font-size: 20px;
     color: white;
     border: yellow outset thick;
+}
+
+fieldset input {
+    font-size: 20px;
+    margin-left: 5px;
 }
 
 .left {
@@ -132,5 +94,67 @@ fieldset {
 }
 
 #myCanvas {
-    border: #ff3333 solid;
+}
+
+.button::before {
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-box-shadow: #959595 0 2px 5px;
+    -moz-box-shadow: #959595 0 2px 5px;
+    border-radius: 3px;
+    box-shadow: #959595 0 2px 5px;
+    content: "";
+    display: block;
+    height: 100%;
+    left: 0;
+    padding: 2px 0 0;
+    position: absolute;
+    top: 0;
+    width: 100%; }
+
+.button:active::before { padding: 1px 0 0; 
+}
+
+.button {
+    -moz-box-shadow: inset 0 0 0 1px #63ad0d;
+    -webkit-box-shadow: inset 0 0 0 1px #63ad0d;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: #eee;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#eee), to(#e2e2e2));
+    background: -moz-linear-gradient(#eee, #e2e2e2);
+    background: linear-gradient(#eee, #e2e2e2);
+    border: solid 1px #d0d0d0;
+    border-bottom: solid 3px #b2b1b1;
+    border-radius: 3px;
+    box-shadow: inset 0 0 0 1px #f5f5f5;
+    color: #555;
+    display: inline-block;
+    font-size: 20px;
+    margin: 0 25px 25px 0;
+    padding: 10px 20px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #fafafa; 
+}
+
+.button:hover {
+    background: #e4e4e4;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e4e4e4), to(#ededed));
+    background: -moz-linear-gradient(#e4e4e4, #ededed);
+    background: linear-gradient(#e4e4e4, #ededed);
+    border: solid 1px #c2c2c2;
+    border-bottom: solid 3px #b2b1b1;
+    box-shadow: inset 0 0 0 1px #efefef; 
+}
+
+.button:active {
+    background: #dfdfdf;
+    background: -webkit-gradient(linear, 0 0, 0 bottom, from(#dfdfdf), to(#e3e3e3));
+    background: -moz-linear-gradient(#dfdfdf, #e3e3e3);
+    background: linear-gradient(#dfdfdf, #e3e3e3);
+    border: solid 1px #959595;
+    box-shadow: inset 0 10px 15px 0 #c4c4c4;
+    top:2px;
 }
