--- a/css/MazeClient.css
+++ b/css/MazeClient.css
@@ -49,17 +49,16 @@ body {
 }
 
 #controlswrapper {
-    display: inline-block;
     float: right;
     height: 700px;
     background-color: black;
 }
 
 #canvaswrapper {
-    display: inline-block;
     float: left;
     background-color: black;
     border: yellow outset thick;
+    margin-top: 10px;
 }
 
 #pageheader {
@@ -78,23 +77,90 @@ fieldset input {
     margin-left: 5px;
 }
 
-.left {
-    float:left;
-    width:480px;
-}
-
-.right {
-    float:left;
-}
-
 #movement input {
     width: 80px;
     height: 80px;
 }
 
+#movement table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #myCanvas {
     height: 750px;    
     width: 750px;
+}
+
+@media screen and (min-width: 601px) and (max-width: 1180px) {
+    #wrapper {
+        margin-top: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0 10px;
+    }
+
+    #canvaswrapper {
+        width: 73%;
+        margin: 10px 0 5px;
+    }
+
+    #myCanvas {
+        width: 100%;
+        height: auto;
+    }
+
+    #controlswrapper {
+        width: 23%;
+        margin: 0 5px;
+    }
+
+    #movement input {
+        width: 100%;
+        height: auto;
+    }
+    #actions {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #wrapper {
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 0 5px;
+    }
+
+    #pageheader img {
+        width: 100%;
+        height: auto;
+    }
+
+    #canvaswrapper {
+        width: 100%;
+        float: left;
+    }
+
+    #myCanvas {
+        width: 100%;
+        height: auto;
+    }
+
+    #controlswrapper{
+        float: left;
+        width: 100%;
+        height: auto;
+    }
+
+    #movement input {
+        width: 75%;
+        height: auto;
+    }
+
+    #actions {
+        width: auto;
+    }
 }
 
 .button::before {
@@ -158,4 +224,11 @@ fieldset input {
     border: solid 1px #959595;
     box-shadow: inset 0 10px 15px 0 #c4c4c4;
     top:2px;
+}
+
+.button:disabled {
+    color: #888;
+    background: #666666;
+    border: solid 1px #959595;
+    text-shadow: 0 1px 0 #666666; 
 }
