--- a/css/MazeClient.css
+++ b/css/MazeClient.css
@@ -61,6 +61,15 @@ body {
     margin-top: 10px;
 }
 
+#canvas {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    touch-action: none;
+}
+
 #pageheader {
     color: red;
     text-align: center;
